--- a/src/components/viewer/viewer.scss
+++ b/src/components/viewer/viewer.scss
@@ -62,7 +62,7 @@ $color_dark: #1F2326;
     }
 }
 
-.choose-hero {
+.choose-item {
     color: $color_dark;
     font-size: 26px;
     font-weight: 700;
