--- a/src/components/itemList/itemList.scss
+++ b/src/components/itemList/itemList.scss
@@ -16,7 +16,7 @@
     top: -10px;
 }
 
-.hero-list{
+.list{
     @extend %whiteBlock; 
     width: 100%;
     height: 300px;
@@ -36,7 +36,7 @@
         background: linear-gradient(180deg, #df3737, #a01919);
     }
 
-    .list-group {
+    &-group {
         &-item {
             margin: 20px 0;
             position: relative;
