--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,3 +1,5 @@
+$color_dark: #1F2326;
+
 .page {
     width: 900px;
     margin: 0 auto;
@@ -9,7 +11,7 @@
 
         .random-item {
             &-button {
-                background-color: #1F2326;
+                background-color: $color_dark;
                 color: white;
                 font-size: 16px;
         
@@ -28,6 +30,20 @@
                     transform: scale(.95);
                 }
 
+            }
+        }
+        .selected-item {
+            position: relative;
+            &::before {
+                content: '';
+                position: absolute;
+                
+                width: 100%;
+                height: 5px;
+                top: -20px;
+                background-color: rgba(31,35,38, 0.6);;
+                border-radius: 50%;
+                
             }
         }
     }
