--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,6 +15,10 @@
     }
     &-navbar-item {
         margin: 0 5px;
+        cursor: pointer;
+        &:hover {
+            text-shadow: 0 0 2px white;
+        }
     }
 }
 
