--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -19,6 +19,9 @@
         &:hover {
             text-shadow: 0 0 2px white;
         }
+        a {
+            color: white;
+        }
     }
 }
 
