--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -9,7 +9,9 @@ $color_dark: #1F2326;
         padding-bottom: 50px;
         padding: 0 40px;
 
-        .random-item {
+        .random-item-wrapper {
+            position: relative;
+            
             &-button {
                 background-color: $color_dark;
                 color: white;
@@ -29,21 +31,17 @@ $color_dark: #1F2326;
                 &:active {
                     transform: scale(.95);
                 }
-
             }
-        }
-        .selected-item {
-            position: relative;
-            &::before {
+            &::after {
                 content: '';
                 position: absolute;
                 
                 width: 100%;
                 height: 5px;
-                top: -20px;
+                bottom: -8px;
+                left: 0;
                 background-color: rgba(31,35,38, 0.6);;
                 border-radius: 50%;
-                
             }
         }
     }
