--- a/src/components/error/error.scss
+++ b/src/components/error/error.scss
@@ -1,3 +1,4 @@
+$color_dark: #1F2326;
 .error {
     padding-bottom: 10px;
 
@@ -18,5 +19,19 @@
         p{
             font-size: 10px;
         }
+    }
+    &-btn {
+        padding: 2px;
+        background-color: #1F2326;
+        color: white;
+        width: 100px;
+        border-radius: 20px;
+        font-size: 12px;
+    }
+    .none {
+        display: none;
+    }
+    .show {
+        display: block;
     }
 }
